--- a/index.html
+++ b/index.html
@@ -30,16 +30,16 @@ div{max-width: 390px;
   <u>important, please read!</u></font></div>
 <div align="justify"> <font color=white> <font face="menlo"> <font size=2>
    *bottles are made individually & are different;<div>i do small batches / <font color=#ff0000>1 <font color=#ff8000>b<font color=#ffff00>o<font color=#80ff00>t<font color=#00ff80>t<font color=#0080ff>l<font color=8000ff>e<font color=white> per order please :) </div></div>
-<p align="justify"> <font color=white> <font face="menlo"> <font size=2>
-  *direct sales only / <font color=#ff0000>c<font color=#ff8000>r<font color=#ffff00>y<font color=#80ff00>p<font color=#0080ff>t<font color=8000ff>o<font color=white> / worldwide shipping</p>
-<p align="justify"> <font color=white> <font face="menlo"> <font size=2>
-  *follow <a href=https://www.instagram.com/matija.wine/><font color=#0080ff><u>@matija.wine</u></font></a> 4 fun; dm 2 buy</p>
+<div align="justify"> <font color=white> <font face="menlo"> <font size=2>
+  *direct sales only / <font color=#ff0000>c<font color=#ff8000>r<font color=#ffff00>y<font color=#80ff00>p<font color=#0080ff>t<font color=8000ff>o<font color=white> / worldwide shipping</div>
+<div align="justify"> <font color=white> <font face="menlo"> <font size=2>
+  *follow <a href=https://www.instagram.com/matija.wine/><font color=#0080ff><u>@matija.wine</u></font></a> 4 fun; dm 2 buy</div>
 
-<div align="center"><a href=about.html><font color=ff8000> <font face="menlo"> <font size=3><u>about</u></a> 
+<p align="center"><a href=about.html><font color=ff8000> <font face="menlo"> <font size=3><u>about</u></a> 
 <a href=winesilove.html><font color=ffff00> <font face="menlo"> <font size=3><u>shoutouts</u></a>
 <a href=yourphotos.html><font color=80ff00> <font face="menlo"> <font size=3><u>snaps</u></a>
 <a href=links.html><font color=0080ff> <font face="menlo"> <font size=3><u>links</u></a>
-<font color=8000ff> <font face="menlo"> <font size=3><u>lineup</u> <font color=white><font size=2> </div>
+<font color=8000ff> <font face="menlo"> <font size=3><u>lineup</u> <font color=white><font size=2>↓</p>
 
   <div align="center"><font size=3><font color=#ff00ff>P<font color=#ff0080>I<font color=#ff0000>N<font color=#ff8000>K <font color=#ffff00>E<font color=#00ff00>C<font color=00ff80>S<font color=#00ffff>T<font color=#0080ff>A<font color=#0000ff>S<font color=#8000ff>Y<font color=white> Pét Nat</font></div>
   <div align="justify"><font size=2><font color=white>grapes: prokupac; yeast: EC-1118; added SO<sub>2</sub>: 0g; method: saignée; alc: ≈12%; residual sugar: 1-3g</font></div> 
