--- a/yourphotos.html
+++ b/yourphotos.html
@@ -35,7 +35,8 @@ div{max-width: 390px;
 <div align="justify"> <font color=white> <font face="menlo"> <font size=2>
   *follow <a href=https://www.instagram.com/matija.wine/><font color=#0080ff><u>@matija.wine</u></font></a> 4 fun; dm 2 buy</div>
 
-<p align="center"><font color=ff8000> <font face="menlo"> <font size=3><u>about</u> 
+<p align="center">
+<a href=about.html><font color=ff8000> <font face="menlo"> <font size=3><u>about</u></a> 
 <a href=winesilove.html><font color=ffff00> <font face="menlo"> <font size=3><u>shoutouts</u></a>
 <a href=yourphotos.html><font color=80ff00> <font face="menlo"> <font size=3><u>snaps</u></a>
 <a href=links.html><font color=0080ff> <font face="menlo"> <font size=3><u>links</u></a>
