--- a/links.html
+++ b/links.html
@@ -43,7 +43,7 @@ div{max-width: 390px;
 <a href=index.html><font color=8000ff> <font face="menlo"> <font size=3><u>lineup</u></a></p>
 
   <div align="justify"> <font color=white> <font face="menlo"> <font size=2>
-how to synthesize <a href="links/MDMA.pdf"><font size=3>mdma</font></a></div>
+*how to synthesize <a href="links/MDMA.pdf"><font size=3>mdma</font></a></div>
 
 
 
